--- a/src/html/preload.html
+++ b/src/html/preload.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Wait please...</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/preload.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/preload.css">
 </head>
 <body>
     <div class="preload_item"></div>
