--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,9 +15,8 @@
 <body>
     <header>
         <nav>
-            <div class="container content-center">
-                <div class="row text-center">
-
+            <div class="container h-100 content-center">
+                <div class="row h-100 text-center">
                     <div class="col-xxl-2 col-xl-3 col-lg-3 col-md-3 col-6 logo">Андрей Браун</div>
                     <div class="px-0 col-xxl-6 col-xl-7 col-lg-8 col-md-9 offset-xxl-4 offset-xl-2 offset-lg-1 offset-md-0 d-none d-md-block">
                         <div class="menu">
@@ -277,21 +276,22 @@
                     <div class="col-8"><textarea name="massage" id="msg1" cols="40" rows="10" placeholder="Сообщение"></textarea></div>
                 </div>
 
-            </div></section>
+            </div>
+        </section>
         <sector class="map-section">
             <div class="container map-container">
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
-                    <div class="map"></div>
-<!--                        <img src="../img/google_map.jpg" alt="">-->
+                        <div class="map"></div>
+                        <!--                        <img src="../img/google_map.jpg" alt="">-->
                     </div>
                 </div>
             </div>
         </sector>
         <footer>
-                        <p>Copyright 2021 Андрей Браун. Design by Web</p> 
-    </footer>
-    </main> 
+            <p>Copyright 2021 Андрей Браун. Design by Web</p>
+        </footer>
+    </main>
     <script src="../js/script.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
