--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,25 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style_index.css">
     <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet" href="../css/style_index.css">
     <link rel="stylesheet" href="../css/animation.css">
+    <link rel="stylesheet" href="../css/preload.css">
+    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>-->
+
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="preloader-thing">
+            <div class="preload_item"></div>
+            <div class="shadows">
+                <div class="shadow1"></div>
+                <div class="shadow2"></div>
+            </div>
+        </div>
+    </div>
     <header>
         <nav>
             <div class="container h-100 content-center">
-                <div class="row h-100 text-center">
+                <div class="row h-100 <text-ce></text-ce>nter">
                     <div class="col-xxl-2 col-xl-3 col-lg-3 col-md-3 col-6 logo">Андрей Браун</div>
                     <div class="px-0 col-xxl-6 col-xl-7 col-lg-8 col-md-9 offset-xxl-4 offset-xl-2 offset-lg-1 offset-md-0 d-none d-md-block">
                         <div class="menu">
-                            <a href="#">обо мне</a>
-                            <a href="#">услуги</a>
-                            <a href="#">кейсы</a>
-                            <a href="#">прайс</a>
-                            <a href="#">отзывы</a>
-                            <a href="#">контакты</a>
+                            <ul>
+                                <li> <a href="#about-me">обо мне</a></li>
+                                <li><a href="#what-i-can">услуги</a></li>
+                                <li><a href="#keys">кейсы</a></li>
+                                <li><a href="#cost-calc">прайс</a></li>
+                                <li><a href="#reviews">отзывы</a></li>
+                                <li><a href="#contacts">контакты</a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-5 d-flex d-md-none flex-column justify-content-center align-items-end">
@@ -33,12 +47,12 @@
                             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Меню
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">обо мне</a></li>
-                                <li><a class="dropdown-item" href="#">услуги</a></li>
-                                <li><a class="dropdown-item" href="#">кейсы</a></li>
-                                <li><a class="dropdown-item" href="#">прайс</a></li>
-                                <li><a class="dropdown-item" href="#">отзывы</a></li>
-                                <li><a class="dropdown-item" href="#">контакты</a></li>
+                                <li><a class="dropdown-item" href="#about-me">обо мне</a></li>
+                                <li><a class="dropdown-item" href="#what-i-can">услуги</a></li>
+                                <li><a class="dropdown-item" href="#keys">кейсы</a></li>
+                                <li><a class="dropdown-item" href="#cost-calc">прайс</a></li>
+                                <li><a class="dropdown-item" href="#reviews">отзывы</a></li>
+                                <li><a class="dropdown-item" href="#contacts">контакты</a></li>
                             </ul>
                         </div>
                     </div>
@@ -61,14 +75,13 @@
                 </div>
             </div>
         </section>
-        <section class="about-me-section">
+        <section class="about-me-section" id="about-me">
             <div class="container about-me-container">
                 <div class="row text-center justify-content-center">
-
                     <div class="col-8">
                         <h2>Обо мне</h2>
                         <hr class="orange-line">
-                        <img src="../img/Small_guy.png" alt="">
+                        <img loading="lazy" src="../img/Small_guy.png" alt="">
                         <p class="about-me-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis maiores dolores magnam similique esse reprehenderit beatae cumque, quia voluptas laboriosam.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis maiores dolores magnam similique esse reprehenderit beatae cumque, quia voluptas laboriosam.</p>
                         <div class="download-button">
@@ -78,7 +91,7 @@
                 </div>
             </div>
         </section>
-        <section class="what-i-can-section">
+        <section class="what-i-can-section" id="what-i-can">
             <div class="container what-i-can-container">
                 <div class="row justify-content-center text-center">
                     <div class="col-6">
@@ -92,19 +105,16 @@
                         <h3>Веб-дизайн</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, neque?</p>
                     </div>
-
                     <div class="col-lg-3 col-md-6 col-12 mt-5 mt-md-0 wic-item">
                         <img src="../img/znak.png" alt="">
                         <h3>Разработка</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, neque?</p>
                     </div>
-
                     <div class="col-lg-3 col-md-6 col-12 mt-5 mt-md-0 wic-item">
                         <img src="../img/raketa.png" alt="">
                         <h3>CEO-Оптимизация</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, neque?</p>
                     </div>
-
                     <div class="col-lg-3 col-md-6 col-12 mt-5 mt-md-0 wic-item gramafon">
                         <img src="../img/garammofon.png" alt="">
                         <h3>Маркетинг</h3>
@@ -114,7 +124,7 @@
 
             </div>
         </section>
-        <section class="keys-section">
+        <section class="keys-section" id="keys">
             <div class="container keys-container">
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
@@ -125,7 +135,13 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
                         <p class="discription">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, provident!</p>
-                        <img src="../img/Site.jpg" alt="">
+                        <a class="popup-open" href="#"><img class="site-not-open" loading="lazy" src="../img/Site.jpg" alt=""></a>
+                        <div class="popup-fade">
+                            <div class="popup">
+                                <a class="popup-close" href="#">Закрыть</a>
+                                <img loading="lazy" src="../img/Site.jpg" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div class="row text-start under-img">
                         <div class="col-md-3 col-12">
@@ -140,43 +156,41 @@
                             <p class="under-img-discription">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus voluptatem ea fugiat officia officiis praesentium dolor beatae atque similique, eius tempore, velit minus, magni pariatur ducimus soluta doloribus id, labore!</p>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </section>
-        <section class="cost-calc-section">
+        <section class="cost-calc-section" id="cost-calc">
             <div class="container cost-calc-container">
                 <div class="row justify-content-center">
                     <div class="col-10">
                         <div class="cost-calc-block">
-                            <form action="site-options"></form>
+                            <!--                            <form name="form-cost-calc">-->
                             <h2>Расчёт стоимости</h2>
                             <div class="option-box">
                                 <h3>тип сайта</h3>
-                                <select class="selector" name="Type" id="1">
+                                <select class="selector" name="Type" id="select-site-type">
                                     <option selected disabled>Выберите пункт...</option>
-                                    <option value="type-1">Сайт-визитка</option>
-                                    <option value="type-2">Корпоративный</option>
-                                    <option value="type-3">Интернет-магазин</option>
+                                    <option value="1">Сайт-визитка</option>
+                                    <option value="2">Корпоративный</option>
+                                    <option value="3">Интернет-магазин</option>
                                 </select>
                             </div>
                             <div class="option-box">
                                 <h3>дизайн сайта</h3>
-                                <select class="selector" name="Design" id="2">
+                                <select class="selector" name="Design" id="select-site-design">
                                     <option selected disabled>Выберите пункт...</option>
-                                    <option value="design-1">Шаблонный</option>
-                                    <option value="design-2">Эксклюзивный</option>
-                                    <option value="design-3">Легендарный</option>
+                                    <option value="1">Шаблонный</option>
+                                    <option value="2">Эксклюзивный</option>
+                                    <option value="3">Легендарный</option>
                                 </select>
                             </div>
                             <div class="option-box">
                                 <h3>адаптивность сайта</h3>
-                                <select class="selector" name="Adaptabillity" id="3">
+                                <select class="selector" name="Adaptabillity" id="select-site-adaptabillity">
                                     <option selected disabled>Выберите пункт...</option>
-                                    <option value="adaptabillity-1">Для компьютеров</option>
-                                    <option value="adaptabillity-2">Для смартфонов</option>
-                                    <option value="adaptabillity-3">Для компьютеров и смартфонов</option>
+                                    <option value="1">Для компьютеров</option>
+                                    <option value="2">Для смартфонов</option>
+                                    <option value="3">Для компьютеров и смартфонов</option>
                                 </select>
                             </div>
                             <hr class="cc-line">
@@ -186,22 +200,23 @@
                                     <p>Сроки</p>
                                 </div>
                                 <div class="col-10 cost-time">
-                                    <p>0</p>
-                                    <p>0</p>
+                                    <p id="cost">0 руб.</p>
+                                    <p id="time">0 сут.</p>
                                 </div>
-
                             </div>
                             <div class="row justify-content-center text-center">
                                 <div class="mx-auto">
-                                    <input type="submit" value="Оставить заявку">
+                                    <input type="submit" id="cost-calc-submit" value="Рассчитать">
                                 </div>
+
                             </div>
+                            <!--                            </form>-->
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="statistic-section">
+        <section class="statistic-section" id="statistic">
             <div class="container statistic-container">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
@@ -212,28 +227,28 @@
                 <div class="row text-center justify-content-center ">
                     <div class="col-lg-3 col-md-6 col-12 statistic-icons">
                         <div class="img-box-smile"></div>
-                        <h3>120</h3>
+                        <h3 class="number">120</h3>
                         <p>счастливых клиентов</p>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-12 statistic-icons">
+                    <div class="col-lg-3 col-md-6 col-12 statistic-icons col-fourth">
                         <div class="img-box-skobki"></div>
-                        <h3>4,600</h3>
+                        <h3 class="number">4600</h3>
                         <p>часов работы</p>
                     </div>
                     <div class="col-lg-3 col-md-6 col-12 statistic-icons">
                         <div class="img-box-galochka"></div>
-                        <h3>340</h3>
+                        <h3 class="number">340</h3>
                         <p>проектов завершено</p>
                     </div>
                     <div class="col-lg-3 col-md-6 col-12 statistic-icons">
                         <div class="img-box-cubok"></div>
-                        <h3>23</h3>
+                        <h3 class="number">23</h3>
                         <p>наград получено</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="reviews-section">
+        <section class="reviews-section" id="reviews">
             <div class="container reviews-container">
                 <div class="row justify-content-center text-center">
                     <div class="col-8">
@@ -247,7 +262,7 @@
                 </div>
             </div>
         </section>
-        <section class="contacts-section">
+        <section class="contacts-section" id="contacts">
             <div class="container contacts-container">
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
@@ -275,25 +290,43 @@
                     <div class="col-4"><input type="text" value="" placeholder="Email"></div>
                     <div class="col-8"><textarea name="massage" id="msg1" cols="40" rows="10" placeholder="Сообщение"></textarea></div>
                 </div>
-
+                <div class="row justify-content-center text-center networks">
+                    <div class="col-1 del-md network"><img src="../img/fb.png" alt=""></div>
+                    <div class="col-1 del-md network"><img src="../img/twitter.png" alt=""></div>
+                    <div class="col-1 del-md network"><img src="../img/ball.png" alt=""></div>
+                    <div class="col-1 del-md network"><img src="../img/cat.png" alt=""></div>
+                    <div class="col-1 del-md network"><img src="../img/inst.png" alt=""></div>
+                    <div class="col-1 del-md network"><img src="../img/in.png" alt=""></div>
+                </div>
             </div>
         </section>
-        <sector class="map-section">
+        <section class="map-section">
             <div class="container map-container">
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
                         <div class="map"></div>
-                        <!--                        <img src="../img/google_map.jpg" alt="">-->
                     </div>
                 </div>
             </div>
-        </sector>
+        </section>
         <footer>
             <p>Copyright 2021 Андрей Браун. Design by Web</p>
         </footer>
     </main>
-    <script src="../js/script.js"></script>
+    
+    <div class="delay-window-block delay-window-display" id="delay-window-block-id">
+        <div class="delay-window-bg delay-window-all"></div>
+        <a id="close-delay-link" href="#cost-calc">
+            <div class="delay-window delay-window-display delay-window-all" id="delay-window-id">
+                Рассчитать стоимость сайта прямо сейчас
+            </div>
+        </a>
+        <input class="close-delay-submit delay-window-display delay-window-all" type="submit" value="Закрыть">
+    </div>
+
+    <script src="../js/jquery-3.6.1.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
