--- a/src/html/test.html
+++ b/src/html/test.html
@@ -7,87 +7,40 @@
 </head>
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/bootstrap.min.css">
+<!--<link rel="stylesheet" href="../css/owl.carousel.min.css">-->
+<!--<link rel="stylesheet" href="../css/owl.theme.default.min.css">-->
 <link rel="stylesheet" href="../css/test.css">
-<script src="../js/jquery.counterup.min.js"></script>
-
 <body>
-    <select class="selector" name="select-name" id="select-id">
-        <option value="1">Шаблонный</option>
-        <option value="2">Эксклюзивный</option>
-        <option value="3">Легендарный</option>
-    </select>
-    <input type="submit" id="submit-id" value="кнопка">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="container">
-        <div class="row text-center justify-content-center">
-            <div class="col-2">
-                <div>
-                    <h3 class="number">100</h3>
-                </div>
-            </div>
-            <div class="col-2">
-                <div>
-                    <h3 class="number">400000</h3>
-                </div>
-            </div>
-        </div>
+
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="123">
     </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt=".22.">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Предыдущий</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Следующий</span>
+  </button>
+</div>
+
+
 
     <script src="../js/jquery-3.6.1.min.js"></script>
-
+    <script src="../js/bootstrap.bundle.min.js"></script>
+<!--    <script src="../js/owl.carousel.min.js"></script>-->
     <script src="../js/test.js"></script>
-
-
 </body>
 
 </html>
