--- a/src/html/index.html
+++ b/src/html/index.html
@@ -259,7 +259,7 @@
                         <h2>отзывы</h2>
                         <hr class="orange-line">
 
-                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                        <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -267,21 +267,21 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="../img/photo_reviews.png" class="d-block w-100" alt=".1.">
+                                    <img src="../img/photo_reviews.png" style="margin-bottom: 149px" class="" alt="">
                                     <div class="carousel-caption d-none d-md-block">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus libero, sed dicta deleniti porro fugiat.</p>
+                                        <p class="d-block text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus libero, sed dicta deleniti porro fugiat.</p>
                                         <p><b>Михаил,</b> Ген директор ПАО "Газпром".</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../img/Photo-reviews-men_2.png" class="d-block w-100" alt=".2.">
+                                    <img src="../img/Photo-reviews-men_2.png" style="margin-bottom: 150px" class="" alt="">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus libero, sed dicta deleniti porro fugiat.</p>
                                         <p><b>Олег,</b> Главный руководитель OOO "ФИН-банк".</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../img/Photo-reviews-woman.png" class="d-block w-100" alt=".3.">
+                                    <img src="../img/Photo-reviews-woman.png" style="margin-bottom: 150px" class="" alt="">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus libero, sed dicta deleniti porro fugiat.</p>
                                         <p><b>Александра,</b> Зам. директора OOO "Яндекс".</p>
