--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p class="about-me-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis maiores dolores magnam similique esse reprehenderit beatae cumque, quia voluptas laboriosam.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis maiores dolores magnam similique esse reprehenderit beatae cumque, quia voluptas laboriosam.</p>
                         <div class="download-button">
-                            <input type="submit" value="Скачать резюме">
+                            <a href="./src/pdf/Rezume.pdf" target="_blank"><input type="submit" value="Посмотреть резюме"></a>
                         </div>
                     </div>
                 </div>
